--- a/One_Page_Website/CSS/One_Page_Website.css
+++ b/One_Page_Website/CSS/One_Page_Website.css
@@ -9,6 +9,24 @@ html {
         text-align: center;
     }
 
+   /* Slideshow container */
+   .slideshow-container {
+        max-width: 1000px;
+        position: relative;
+        margin: auto;
+   }
+
+   /* Caption text */
+    .text {
+        color: #f2f2f2;
+        font-size: 15px;
+        padding: 8px 12px;
+        position: absolute;
+        bottom: 8px;
+        width: 100%;
+        text-align: center;
+    }
+
     .hover-shadow {
         cursor: pointer;
         transition: 0.3s;
@@ -90,6 +108,33 @@ html {
         padding: 8px 12px;
         position: absolute;
         top: 0;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+
+    .active, .dot:hover {
+        background-color: #717171;
+    }
+
+    /* Fading animation */
+    .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
     }
 
     .caption-container {
