--- a/Poke_Squad/CSS/Shared.css
+++ b/Poke_Squad/CSS/Shared.css
@@ -9,6 +9,7 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    background-color: black;
 }
 
 body {
@@ -18,6 +19,13 @@ body {
     line-height: 1.42857143;
     color: #333;
     background-color: #fff;
+    opacity: 1;
+    transition: 1s opacity;
+}
+
+body.fade-out {
+    opacity: 0;
+    transition: none;
 }
 
 footer,
