--- a/One_Page_Website/CSS/One_Page_Website.css
+++ b/One_Page_Website/CSS/One_Page_Website.css
@@ -2,199 +2,109 @@
 CSS
 --------------------------------*/
 
-html {
-    body {
-        font: Ariel;
-        background-color: yellow;
-        text-align: center;
-    }
+body {
+    font: Arial, sans-serif;
+    background-color: yellow;
+    text-align: center;
+}
 
-   /* Slideshow container */
-   .slideshow-container {
-        max-width: 1000px;
-        position: relative;
-        margin: auto;
-   }
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
 
-   /* Caption text */
-    .text {
-        color: #f2f2f2;
-        font-size: 15px;
-        padding: 8px 12px;
-        position: absolute;
-        bottom: 8px;
-        width: 100%;
-        text-align: center;
-    }
+.mySlides {
+    display: none;
+}
 
-    .hover-shadow {
-        cursor: pointer;
-        transition: 0.3s;
-    }
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
 
-    .hover-shadow:hover {
-        opacity: 0.7;
-    }
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
 
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        padding-top: 100px;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: black;
-    }
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
 
-    .modal-content {
-        position: relative;
-        margin: auto;
-        padding: 0;
-        width: 90%;
-        max-width: 1200px;
-    }
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
 
-    .close {
-        position: absolute;
-        top: 10px;
-        right: 25px;
-        color: white;
-        font-size: 35px;
-        font-weight: bold;
-        transition: 0.3s;
-    }
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
 
-    .close:hover,
-    .close:focus {
-        color: #bbb;
-        text-decoration: none;
-        cursor: pointer;
-    }
+.active, .dot:hover {
+    background-color: #717171;
+}
 
-    .mySlides {
-        display: none;
-    }
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
 
-    .prev, .next {
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        width: auto;
-        margin-top: -22px;
-        padding: 16px;
-        color: white;
-        font-weight: bold;
-        font-size: 20px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-        user-select: none;
-    }
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
 
-    .next {
-        right: 0;
-        border-radius: 3px 0 0 3px;
-    }
+header, section, footer {
+    padding: 20px;
+    background-color: CornflowerBlue;
+    color: white;
+    text-align: center;
+}
 
-    .prev:hover, .next:hover {
-        background-color: rgba(0,0,0,0.8);
-    }
+nav {
+    background-color: LimeGreen;
+    padding: 10px;
+    text-align: center;
+}
 
-    .numbertext {
-        color: #f2f2f2;
-        font-size: 12px;
-        padding: 8px 12px;
-        position: absolute;
-        top: 0;
-    }
+nav a {
+    color: black;
+    margin-right: 15px;
+    text-align: center;
+}
 
-    /* The dots/bullets/indicators */
-    .dot {
-        cursor: pointer;
-        height: 15px;
-        width: 15px;
-        margin: 0 2px;
-        background-color: #bbb;
-        border-radius: 50%;
-        display: inline-block;
-        transition: background-color 0.6s ease;
-    }
+section {
+    width: 95%;
+    margin: 20px;
+    text-align: center;
+    border: dashed red 4px;
+    border-radius: 10px;
+}
 
-    .active, .dot:hover {
-        background-color: #717171;
-    }
-
-    /* Fading animation */
-    .fade {
-        animation-name: fade;
-        animation-duration: 1.5s;
-    }
-
-    @keyframes fade {
-        from {opacity: .4}
-        to {opacity: 1}
-    }
-
-    .caption-container {
-        text-align: center;
-        background-color: black;
-        padding: 2px 16px;
-        color: white;
-    }
-
-    .column {
-        float: left;
-        width: 25%;
-    }
-
-    .demo {
-        opacity: 0.6;
-    }
-
-    .active, .demo:hover {
-        opacity: 1;
-    }
-
-    .cursor {
-        cursor: pointer;
-    }
-
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-
-    header, section, footer {
-        padding: 20px;
-        background-color: CornflowerBlue;
-        color: white;
-        text-align: center;
-    }
-
-    nav {
-        background-color: LimeGreen;
-        padding: 10px;
-        text-align: center;
-    }
-
-    nav a {
-        color: black;
-        margin-right: 15px;
-        text-align: center;
-    }
-
-    section {
-        width: 95%;
-        margin: 20px;
-        text-align: center;
-        border: dashed red 4px;
-        border-radius: 10px;
-    }
-
-    footer {
-        text-align: center;
-    }
+footer {
+    text-align: center;
 }
